# EmailSolver

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  README.md  alembic.ini  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 143f67a90b1a_replace_analysis_query_with_unread_only_.py  18db2440cd0b_add_email_action_history_table.py  299901b6bb7d_add_analysis_type_to_analyses.py  8c146c84ef63_create_initial_tables.py  a1b2c3d4e5f6_add_category_actions_to_analyses.py  b2c3d4e5f6g7_add_unsubscribe_headers.py  f80622ade508_add_ai_insights_to_analyses.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  logging.py  protocols.py  security.py
app/models/: db.py  schemas.py
app/services/: auth_service.py  (+5 more)
docs/: api.md  architecture.md  frontend-guide.md
scripts/: db_restore.sh  deploy-local.sh  deploy.sh  ec2-setup.sh  test_all.py  test_anthropic.py  test_auth_flow.py
tests/: analysis_helpers.py  conftest.py  test_analysis_actions.py  test_analysis_inbox_scan.py  test_analysis_routes.py  test_analysis_run.py  test_analysis_service.py  test_auth_routes.py  test_auth_service.py  test_classification_service.py  test_cleanup.py  test_config.py  test_email_routes.py  test_gmail_service.py  test_security.py  test_unsubscribe_service.py
tui/: __main__.py  app.py  client.py  config.py  models.py
web/: .dockerignore  Caddyfile  Dockerfile  index.html  package-lock.json  package.json
(+57 files in other folders)
