[project]
name = "emailsolver"
version = "0.1.0"
description = "Gmail inbox analyzer and cleaner using Claude Haiku"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "tenacity>=9.1.4",
]

[tool.setuptools.packages.find]
include = ["app*", "tui*"]

[project.scripts]
emailsolver-tui = "tui.__main__:main"

[project.optional-dependencies]
tui = ["textual>=0.89.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/integration"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]
"app/core/dependencies.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
